--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -5,14 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="#">Каталог</a>
-    <a href="">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta distinctio dolorem ipsam maiores molestias
+    <a class="menu_link" href="../index.html">Главная</a>
+    <a class="menu_link" href="#">Каталог</a>
+    <a class="menu_link" href="">Контакты</a>
+    <h1 class="title_h1">Каталог</h1>
+    <p class="text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta distinctio dolorem ipsam maiores molestias
         quia quos, sit. A deserunt, illum ipsam minima nobis quam quod repellendus? Debitis, expedita nisi nostrum
         numquam odit pariatur perferendis unde. Aperiam atque autem commodi consectetur doloribus dolorum enim error
         esse exercitationem inventore itaque iusto molestiae molestias nam nesciunt nisi quisquam recusandae repellat
@@ -24,15 +25,15 @@
         quisquam rerum sequi soluta temporibus tenetur voluptas voluptates! A animi delectus, dolorum eaque eligendi
         id libero quos sed sunt?</p>
     <h3>Audi A4</h3>
-    <p>Audi 80, с 1995 года Audi A4, представляет собой семейство моделей среднего класса, выпускаемых под маркой Audi.
+    <p class="text_p">Audi 80, с 1995 года Audi A4, представляет собой семейство моделей среднего класса, выпускаемых под маркой Audi.
         Внутреннее обозначение автомобилей этой серии — «тип В»</p>
-    <img src="../img/foto_1.jpg" alt="Audi_A4">
+    <img class="img" src="../img/foto_1.jpg" alt="Audi_A4" width="200">
     <h3>Peugeot 3008</h3>
-    <p>Peugeot 3008 — компактный кроссовер, выпускаемый под маркой Peugeot. Впервые был представлен в сентябре 2008 года
+    <p class="text_p">Peugeot 3008 — компактный кроссовер, выпускаемый под маркой Peugeot. Впервые был представлен в сентябре 2008 года
         на Парижском автосалоне. Выпускается в 5-местном варианте с мая 2009 года.</p>
-    <img src="../img/foto_2.jpg" alt="Peugeot 3008">
+    <img class="img" src="../img/foto_2.jpg" alt="Peugeot 3008" width="200">
     <h3>Changan UNI-T</h3>
-    <p>Changan UNI-T — выпускаемый с 2020 года компактный кроссовер китайской компании Changan.</p>
-    <img src="../img/foto_3.jpg" alt="Changan UNI-T">
+    <p class="text_p">Changan UNI-T — выпускаемый с 2020 года компактный кроссовер китайской компании Changan.</p>
+    <img class="img" src="../img/foto_3.jpg" alt="Changan UNI-T" width="200">
 </body>
 </html>
