--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="#">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolorum earum et eum, excepturi id magnam
+    <a class="menu_link" href="#">Главная</a>
+    <a class="menu_link" href="catalog/catalog.html">Каталог</a>
+    <a class="menu_link" href="">Контакты</a>
+    <h1 class="title_h1">Главная страница</h1>
+    <p class="text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolorum earum et eum, excepturi id magnam
         nemo nesciunt non numquam omnis perspiciatis praesentium quaerat quidem quisquam tempore temporibus totam.
         Ab aliquam animi asperiores aut corporis culpa, cumque delectus error hic ipsum laudantium nobis odio, odit
         quod quos recusandae tempora voluptate. Aspernatur cupiditate earum enim est ipsa ipsum laborum libero minus
@@ -23,12 +24,12 @@
         repellendus similique sit voluptatum! Alias assumenda cupiditate esse, et eveniet, ipsa iusto labore magnam
         qui sapiente unde ut veniam! Accusantium animi aut corporis dolor dolore explicabo hic labore laboriosam
         quaerat qui, quod tempora unde vel!</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consectetur culpa distinctio esse et ex id
+    <h2 class="title_h2">Добро пожаловать на сайт</h2>
+    <p class="text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consectetur culpa distinctio esse et ex id
         ipsa iure, magni nemo obcaecati odit perferendis quidem quis quos, rem veniam veritatis voluptatibus?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consectetur culpa distinctio esse et ex id
+    <p class="text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consectetur culpa distinctio esse et ex id
         ipsa iure, magni nemo obcaecati odit perferendis quidem quis quos, rem veniam veritatis voluptatibus?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consectetur culpa distinctio esse et ex id
+    <p class="text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consectetur culpa distinctio esse et ex id
         ipsa iure, magni nemo obcaecati odit perferendis quidem quis quos, rem veniam veritatis voluptatibus?</p>
 </body>
 </html>
